--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -59,9 +59,44 @@
             </nav>
 
         </div>
-        <h1>Shopme Admin control Panel</h1>
+        <h2>Manage Users</h2>
+        <a class="btn btn-primary p-2 my-2" th:href="@{/users/new}">Create new user</a>
 
+        <div th:if="${message != null}" class="alert alert-success text-center">
+            [[${message}]]
+        </div>
         <div>
+            <table class="table table-responsive-xl table-bordered table-striped table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>User Id</th>
+                        <th>Photos</th>
+                        <th>Email</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Roles</th>
+                        <th>Enabled</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="user : ${listUsers}">
+                        <td>[[${user.id}]]</td>
+                        <td></td>
+                        <td>[[${user.email}]]</td>
+                        <td>[[${user.firstName}]]</td>
+                        <td>[[${user.lastName}]]</td>
+                        <td>[[${user.roles}]]</td>
+                        <td>[[${user.enabled}]]</td>
+                        <td>
+                            Edit &nbsp; Delete
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="text-center">
             <p>Shopme Control Panel - Copyright &copy; Shopme</p>
         </div>
     </div>
