--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/user_form.html
@@ -62,8 +62,9 @@
         <h2>Manage Users | [[${pageTitle}]]</h2>
 
         <!-- Create Form -->
-        <form  th:action = "@{/users/save}" method="post"
+        <form  th:action = "@{/users/save}" method="post" id="formSubmit"
               style="max-width: 700px; margin: 0 auto" th:object="${user}"
+               enctype="multipart/form-data"
               onsubmit= "return checkEmailUnique(this)">
             <input type="hidden" name="id" id="userId"  th:field="${user.id}">
                 <div class="border border-secondary rounded p-3">
@@ -122,8 +123,9 @@
                     <div class="row input-group p-3">
                         <label class="col-sm-4 form-label" >Photos:</label>
                         <div class="col-sm-8">
-                            <input type="file"  id="fileImage" accept="image/png ,image/jpeg">
-                            <img th:src="@{/images/default-user.png}" alt="Photo preview" id="thumbnail">
+                            <input type="hidden" th:field="${user.photos}">
+                            <input type="file"  id="fileImage" name="image" accept="image/png ,image/jpeg" class="mb-2">
+                            <img th:src = "@{${user.getPhotosImagePath()}}" alt="Photo preview" id="thumbnail" class="img-fluid">
                         </div>
                     </div>
 
@@ -161,6 +163,23 @@
     $("#cancelButton").on("click", function (){
         window.location = "[[@{/users}]]"
     })
+
+// validate file size
+    $("#fileImage").change(function (){
+        const file = this.files[0];
+        const fileSize = this.files[0].size;
+        if(fileSize > 1048576){
+            this.setCustomValidity("You must choose an image less than 1 MB");
+            this.reportValidity();
+        } else {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                $("#thumbnail").attr("src" , e.target.result);
+            }
+            reader.readAsDataURL(file);
+        }
+    })
+
     function checkEmailUnique(form){
         url = "[[@{/users/check_email}]]";
         userEmail = $("#emailInput").val();
