--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -112,6 +112,27 @@
                 </tbody>
             </table>
         </div>
+
+<!--        pagination-->
+        <div class="text-center m-1">
+            <span>Showing user number # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+        </div>
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{/users/page/1}">First</a></li>
+                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1}}">Previous</a></li>
+
+
+                <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" th:each = "i : ${#numbers.sequence(1,totalPages)}">
+                    <a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+                </li>
+
+                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage+ 1}}">Next</a></li>
+                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages}}">Last</a></li>
+
+            </ul>
+        </nav>
+
 <!--        modal confirm delete -->
         <div class="modal fade text-center" id="confirmDialog">
             <div class="modal-dialog">
