--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -73,13 +73,50 @@
             <table class="table table-responsive-xl table-bordered table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
-                        <th class="text-center">User Id</th>
-                        <th class="text-center">Photos</th>
-                        <th class="text-center">Email</th>
-                        <th class="text-center">First Name</th>
-                        <th class="text-center">Last Name</th>
+                        <th class="text-center ">
+                            <a class="text-white text-decoration-none" th:if="${sortField != 'id' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=id' +'&sortDir=' + ${sortDir}}" >User Id</a>
+                            <a class="text-white text-decoration-none" th:if="${sortField == 'id' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=id' +'&sortDir=' + ${reverseSortDir}}" >User Id</a>
+                            <span th:if = "${sortField == 'id'}"
+                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
+                        </th>
+                        <th class="text-center">
+                            Photos
+                        </th>
+                        <th class="text-center">
+                            <a class="text-white text-decoration-none" th:if="${sortField != 'email' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=email' +'&sortDir=' + ${sortDir}}" >Email</a>
+                            <a class="text-white text-decoration-none" th:if="${sortField == 'email' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=email' +'&sortDir=' + ${reverseSortDir}}" >Email</a>
+                            <span th:if = "${sortField == 'email'}"
+                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
+                        </th>
+                        <th class="text-center">
+                            <a class="text-white text-decoration-none" th:if="${sortField != 'firstName' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=firstName' +'&sortDir=' + ${sortDir}}" >First Name</a>
+                            <a class="text-white text-decoration-none" th:if="${sortField == 'firstName' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=firstName' +'&sortDir=' + ${reverseSortDir}}" >First Name</a>
+                            <span th:if = "${sortField == 'firstName'}"
+                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
+                        </th>
+                        <th class="text-center">
+                            <a class="text-white text-decoration-none" th:if="${sortField != 'lastName' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=lastName' +'&sortDir=' + ${sortDir}}" >Last Name</a>
+                            <a class="text-white text-decoration-none" th:if="${sortField == 'lastName' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=lastName' +'&sortDir=' + ${reverseSortDir}}" >Last Name</a>
+                            <span th:if = "${sortField == 'lastName'}"
+                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
+                        </th>
                         <th class="text-center">Roles</th>
-                        <th class="text-center">Enabled</th>
+                        <th class="text-center">
+                            <a class="text-white text-decoration-none" th:if="${sortField != 'enabled' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=enabled' +'&sortDir=' + ${sortDir}}" >Enabled</a>
+                            <a class="text-white text-decoration-none" th:if="${sortField == 'enabled' }"
+                               th:href = "@{'/users/page/' + ${currentPage} + '/?sortField=enabled' +'&sortDir=' + ${reverseSortDir}}" >Enabled</a>
+                            <span th:if = "${sortField == 'enabled'}"
+                                  th:class="${sortDir == 'asc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}"></span>
+                        </th>
                         <th class="text-center"></th>
                     </tr>
                 </thead>
@@ -119,16 +156,16 @@
         </div>
         <nav>
             <ul class="pagination justify-content-center">
-                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{/users/page/1}">First</a></li>
-                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1}}">Previous</a></li>
+                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/1?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">First</a></li>
+                <li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Previous</a></li>
 
 
                 <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" th:each = "i : ${#numbers.sequence(1,totalPages)}">
-                    <a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+                    <a class="page-link" th:href="@{'/users/page/' + ${i} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">[[${i}]]</a>
                 </li>
 
-                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage+ 1}}">Next</a></li>
-                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages}}">Last</a></li>
+                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage+ 1} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}">Next</a></li>
+                <li th:class="${currentPage < totalPages ? 'page-item': 'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages} + '?sortField=' + ${sortField}+ '&sortDir=' + ${sortDir}}" >Last</a></li>
 
             </ul>
         </nav>
