--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -1,70 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 , minimum-scale = 1.0">
-    <title>Home - Shopme Admin Control Panel</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}">
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.min.js}"></script>
-
-</head>
+<html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<head th:replace = "fragments :: page_head('Home - Shopme Admin')"></head>
 <body>
     <div class="container-fluid">
         <!-- navigation -->
 
-        <div>
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                <a class="navbar-brand" th:href="@{/}">
-                    <img th:src="@{/images/ShopmeAdminSmall.png}">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapeibleNavbar" aria-controls="collapeibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapeibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/users}">Users</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/categories}">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/brands}">Brands</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/products}">Products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/customers}">Customers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/orders}">Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/report}">Sale reports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/menus}">Menus</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/settings}">Settings</a>
-                        </li>
-                    </ul>
-                </div>
+        <div th:replace="navigation :: menu"></div>
 
-            </nav>
-
-        </div>
         <h1>Shopme Admin control Panel</h1>
 
-        <div>
-            <p>Shopme Control Panel - Copyright &copy; Shopme</p>
-        </div>
+<!--        footer-->
+        <div th:replace = "fragments :: footer"></div>
     </div>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#logoutLink").on("click" , function (e) {
+                e.preventDefault();
+                document.logoutForm.submit();
+            })
+        })
+    </script>
 </body>
 </html>
 
