--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/user_form.html
@@ -13,52 +13,8 @@
     <div class="container-fluid">
         <!-- navigation -->
 
-        <div>
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                <a class="navbar-brand" th:href="@{/}">
-                    <img th:src="@{/images/ShopmeAdminSmall.png}">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapeibleNavbar" aria-controls="collapeibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapeibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/users}">Users</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/categories}">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/brands}">Brands</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/products}">Products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/customers}">Customers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/orders}">Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/report}">Sale reports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/menus}">Menus</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/settings}">Settings</a>
-                        </li>
-                    </ul>
-                </div>
+        <div th:replace="navigation :: menu"></div>
 
-            </nav>
-
-        </div>
         <h2>Manage Users | [[${pageTitle}]]</h2>
 
         <!-- Create Form -->
@@ -155,9 +111,7 @@
             </div>
         </div>
 
-        <div class="text-center">
-            <p>Shopme Control Panel - Copyright &copy; Shopme</p>
-        </div>
+        <div th:replace="fragments :: footer"></div>
     </div>
 <script>
     $("#cancelButton").on("click", function (){
