--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/login.html
@@ -28,9 +28,13 @@
                 </div>
                 <p>Access to Shopme Control Panel</p>
 
-                <input type="email" name="email"  class="form-control my-3" placeholder="Email" required>
+                <input type="email" name="email"  class="form-control my-3" placeholder="Email" required />
 
-                <input type="password" name="password"  class="form-control my-3" placeholder="Password" required>
+                <input type="password" name="password"  class="form-control my-3" placeholder="Password" required />
+                <div>
+                    <input type="checkbox" name="remember-me" class="my-3"> Remember me
+                </div>
+
 
                 <input type="submit" value="Login" class="btn btn-primary">
 
