--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/navigation.html
@@ -12,35 +12,74 @@
     <div class="collapse navbar-collapse" id="collapeibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/users}">Users</a>
+          <a class="nav-link" th:href="@{/users}" sec:authorize="hasAuthority('Admin')">Users</a>
         </li>
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/categories}">Categories</a>
+            </li>
+        </th:block>
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/brands}">Brands</a>
+            </li>
+        </th:block>
+
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson','Editor','Shipper')">
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/products}">Products</a>
+          </li>
+        </th:block>
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Assistant')">
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/questions}">Questions</a>
+          </li>
+        </th:block>
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Assistant')">
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/reviews}">Reviews</a>
+          </li>
+        </th:block>
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/customers}">Customers</a>
+          </li>
+        </th:block>
+
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/shipping}">Shipping</a>
+            </li>
+        </th:block>
+
+        <th:block  sec:authorize="hasAnyAuthority('Admin', 'Salesperson','Shipper')">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/orders}">Orders</a>
+            </li>
+        </th:block>
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/report}">Sale reports</a>
+            </li>
+        </th:block>
+
+        <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/menus}">Menus</a>
+            </li>
+        </th:block>
+
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/categories}">Categories</a>
+          <a class="nav-link" th:href="@{/settings}" sec:authorize="hasAuthority('Admin')">Settings</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/brands}">Brands</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/products}">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/customers}">Customers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/orders}">Orders</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/report}">Sale reports</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/menus}">Menus</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/settings}">Settings</a>
-        </li>
+
         <li>
           <span class="fa-solid fa-user fa-2x icon-white"></span>
         </li>
