--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 , minimum-scale = 1.0">
     <title>[[${title}]]</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}">
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.bundle.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
     <link rel="stylesheet" th:href="@{/fontawesome/all.css}">
     <link rel="stylesheet" th:href="@{/style.css}">
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <footer class="footer mt-auto py-3 bg-light text-center" th:fragment="footer">
+    <footer class="footer fixed-bottom mt-auto py-3 bg-light text-center" th:fragment="footer">
         <p>Shopme Control Panel - Copyright &copy; Shopme</p>
     </footer>
 </body>
